# ops-automation-using-sre-agent

./: .gitignore  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  temp-healthcheck-linux.sh
agents/: compliance-analyst.json  health-insights.json  ops-chat.json  patch-risk.json
docs/: ai-tier-options.md  architecture.md  blog-wintel-ops-sre-agent.md  demo-environment.md  glpi-setup.md  portal.md  rbac-requirements.md  sre-agent-setup.md  sre-skills.md
docs/demos/: README.md  scenario-a-health-check.md  scenario-b-alert-triage.md  scenario-c-security-agent.md  scenario-d-compliance.md  scenario-e-patching.md  scenario-f-cmdb-sync.md  scenario-g-snapshot-cleanup.md  scenario-h-ticket-remediation.md
docs/implementations/: scenario-b-alert-triage.md  scenario-c-security-troubleshooting.md  scenario-d-compliance.md  scenario-e-patching.md  scenario-f-cmdb-sync.md  (+1 more)
functions/: local.settings.json.example  requirements.txt
infra/: README.md  deploy.sh  main-foundation.bicep  main-foundation.json  main.bicep  main.json  parameters.dev.json
portal/: .env.example  index.html  package.json
portal-api/: .env.example  auth.py  config.py  cosmos_client.py  main.py  requirements.txt
scripts/: demo-alert-monitoring.ps1  demo-cmdb-sync.ps1  demo-compliance-report.ps1  demo-health-check.ps1  demo-patch-assessment.ps1  demo-run-all.ps1  demo-snapshot-cleanup.ps1  gen_sre_doc.py  seed-glpi-tickets.ps1
tests/: test_adapters.py  test_cmdb.py  test_health_checks.py
workflows/: daily-brief.yaml  patch-cycle.yaml
(+73 files in other folders)
